--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
       background:linear-gradient(180deg,#151921,#12161c);
       border:1px solid var(--line); border-radius:16px; overflow:hidden; box-shadow:var(--shadow);
     }
-    .card .img{width:86px; height:86px; overflow:hidden; border-right:1px solid var(--line)}
+    .card .img{width:86px; height:86px; overflow:hidden; border-right:1px solid var(--line); cursor:zoom-in}
     .card .img img{width:100%;height:100%;object-fit:cover;display:block; transition:transform .35s ease}
     .card:active .img img{transform:scale(1.05)}
     .card .body{padding:10px 10px 10px 0}
@@ -115,13 +115,7 @@
     .btn.busy{opacity:.7; pointer-events:none}
     .btn .spin{width:14px;height:14px;border-radius:50%;border:2px solid #fff;border-top-color:transparent;display:inline-block;margin-right:6px;vertical-align:-2px;animation:spin .8s linear infinite}
     .btn:disabled{opacity:.5; cursor:not-allowed}
-    /* Destaque para seleção ativa de pagamento/entrega */
-    .btn.secondary.active{
-      outline:2px solid #f59e0b;
-      box-shadow:0 0 0 3px rgba(245,158,11,.15) inset;
-      border-color:#f59e0b;
-      color:#fff;
-    }
+    .btn.secondary.active{outline:2px solid #f59e0b; box-shadow:0 0 0 3px rgba(245,158,11,.15) inset; border-color:#f59e0b; color:#fff}
 
     /* ===== TAB BAR ===== */
     .tabbar{
@@ -502,6 +496,19 @@
         <button class="btn secondary" id="btnClearRoute"><i class="fa-solid fa-route"></i> Remover rota</button>
       </div>
     </dialog>
+
+    <!-- DIALOG: PREVIEW DE IMAGEM + SHARE -->
+    <dialog id="dlgImg">
+      <div style="display:grid;gap:10px">
+        <img id="dlgImgPic" alt="Foto do item" style="width:min(92vw,680px);max-height:70vh;object-fit:cover;border-radius:14px;border:1px solid #262b36">
+        <div style="display:flex;gap:8px;flex-wrap:wrap;justify-content:flex-end">
+          <button class="btn secondary" onclick="copyItemLink()"><i class="fa-regular fa-copy"></i> Copiar link</button>
+          <button class="btn secondary" onclick="shareItemLink()"><i class="fa-solid fa-share-nodes"></i> Compartilhar</button>
+          <button class="btn" onclick="openItemFromPreview()"><i class="fa-solid fa-eye"></i> Ver detalhes</button>
+          <button class="btn secondary" onclick="dlgImg.close()"><i class="fa-solid fa-xmark"></i> Fechar</button>
+        </div>
+      </div>
+    </dialog>
   </div><!-- /#app -->
 
   <!-- DRAWER DO CARRINHO -->
@@ -831,6 +838,8 @@
     menuSkeleton(); 
     await loadMenu();
     await loadComplements();
+    handleDeepLink();              // << abre o item se vier com ?item=ID
+
     if(user){ 
       applyUser(); 
       await fetchOrders({showSkeleton:true});
@@ -910,7 +919,9 @@
     const status = getOpenStatusLocal();
     const disabled = !lojaAberta;
     el.innerHTML = `
-      <div class="img"><img src="${i.img}" alt="${i.name}" loading="lazy"></div>
+      <div class="img">
+        <img src="${i.img}" alt="${i.name}" loading="lazy">
+      </div>
       <div class="body">
         <div class="name">${i.name}</div>
         <div class="desc">${i.desc||''}</div>
@@ -921,6 +932,9 @@
           </button>
         </div>
       </div>`;
+    // abrir preview ao clicar na foto (sem exigir login)
+    el.querySelector('.img').onclick = ()=> openImagePreview(i);
+    // botão adicionar mantém o fluxo com login/aberto
     el.querySelector('.btn').onclick = ()=> !disabled && requireLoginThen(()=> openItem(i));
     return el;
   }
@@ -998,7 +1012,7 @@
             ${extras}
           </div>
           <div class="qty">
-            <button onclick="dec(${ix})">-</button><span>${it.qty}</span><button onclick="inc(${ix})">+</button>
+            <button onclick="dec(${ix})">-</button><span>${it.qty}</span><button onclick="inc(${ix}))">+</button>
             <strong style="width:86px;text-align:right">${BRL(totalItem)}</strong>
           </div>`;
         box.appendChild(row);
@@ -1593,6 +1607,66 @@
   }
   function stopOrdersAutoRefresh(){
     if(ORDERS_AUTO_TIMER){ clearInterval(ORDERS_AUTO_TIMER); ORDERS_AUTO_TIMER = null; }
+  }
+
+  /* ===== LINK DO ITEM & PREVIEW ===== */
+  let __previewItem = null;
+
+  function makeItemLink(id){
+    const url = new URL(location.href);
+    url.searchParams.set('item', id);
+    url.hash = '';
+    return url.toString();
+  }
+
+  function openImagePreview(item){
+    __previewItem = item;
+    const img = document.getElementById('dlgImgPic');
+    img.src = item.img;
+    img.alt = item.name;
+    document.getElementById('dlgImg').showModal();
+  }
+
+  async function shareItemLink(){
+    if(!__previewItem) return;
+    const url = makeItemLink(__previewItem.id);
+    try{
+      if(navigator.share){
+        await navigator.share({ title: __previewItem.name, text: 'Dá uma olhada nesse item 👇', url });
+        toastOk('Link compartilhado!');
+      }else{
+        await navigator.clipboard.writeText(url);
+        toastOk('Link copiado para a área de transferência.');
+      }
+    }catch(e){
+      toastWarn('Não foi possível compartilhar agora.');
+    }
+  }
+
+  async function copyItemLink(){
+    if(!__previewItem) return;
+    const url = makeItemLink(__previewItem.id);
+    try{
+      await navigator.clipboard.writeText(url);
+      toastOk('Link copiado!');
+    }catch{ toastWarn('Falha ao copiar link.'); }
+  }
+
+  function openItemFromPreview(){
+    if(!__previewItem) return;
+    dlgImg.close();
+    openItem(__previewItem);
+  }
+
+  // Deep-link: abrir automaticamente se vier com ?item=ID
+  function handleDeepLink(){
+    try{
+      const sp = new URLSearchParams(location.search);
+      const id = sp.get('item');
+      if(!id || !Array.isArray(menu) || !menu.length) return;
+      const it = menu.find(x => String(x.id) === String(id));
+      if(it){ openItem(it); }
+    }catch(e){ /* noop */ }
   }
   </script>
 </body>
