--- a/index.html
+++ b/index.html
@@ -502,10 +502,9 @@
       <div style="display:grid;gap:10px">
         <img id="dlgImgPic" alt="Foto do item" style="width:min(92vw,680px);max-height:70vh;object-fit:cover;border-radius:14px;border:1px solid #262b36">
         <div style="display:flex;gap:8px;flex-wrap:wrap;justify-content:flex-end">
-          <button class="btn secondary" onclick="copyItemLink()"><i class="fa-regular fa-copy"></i> Copiar link</button>
-          <button class="btn secondary" onclick="shareItemLink()"><i class="fa-solid fa-share-nodes"></i> Compartilhar</button>
-          <button class="btn" onclick="openItemFromPreview()"><i class="fa-solid fa-eye"></i> Ver detalhes</button>
-          <button class="btn secondary" onclick="dlgImg.close()"><i class="fa-solid fa-xmark"></i> Fechar</button>
+          <button class="btn secondary" onclick="shareItemLink()"><i class="fa-solid fa-share-nodes"></i> Indicar</button>
+          <button class="btn" onclick="openItemFromPreview()"><i class="fa-solid fa-eye"></i> Pedir</button>
+          <button class="btn secondary" onclick="dlgImg.close()"><i class="fa-solid fa-xmark"></i> </button>
         </div>
       </div>
     </dialog>
