--- a/index.html
+++ b/index.html
@@ -722,7 +722,15 @@
   async function api(acao, payload = {}) {
     try {
       showTopbarLoader(true);
-      const res = await fetch(API_URL, { method:'POST', body: JSON.stringify({ acao, token, ...payload }) });
+      // 🔑 pega token do user ou do store se existir
+const tk = user?.token || token || store.get('cf_token', null);
+if (tk) payload.token = tk;
+
+const res = await fetch(API_URL, { 
+  method:'POST', 
+  body: JSON.stringify({ acao, ...payload }) 
+});
+
       const text = await res.text();
       let data; try{ data = JSON.parse(text); }catch(e){ throw new Error(`Resposta não-JSON (HTTP ${res.status}). ${text.slice(0,160)}...`); }
       if(!res.ok || data.ok===false) throw new Error(data.error || `HTTP ${res.status}`);
