--- a/index.html
+++ b/index.html
@@ -718,27 +718,41 @@
     searchTO=setTimeout(()=>{ renderMenu(activeCat); }, 120);
   });
 
-  // ===== API =====
-  async function api(acao, payload = {}) {
-    try {
-      showTopbarLoader(true);
-      // 🔑 pega token do user ou do store se existir
-const tk = user?.token || token || store.get('cf_token', null);
-if (tk) payload.token = tk;
+ // ===== API =====
+async function api(acao, payload = {}) {
+  try {
+    showTopbarLoader(true);
 
-const res = await fetch(API_URL, { 
-  method:'POST', 
-  body: JSON.stringify({ acao, ...payload }) 
-});
+    // 🔑 Corrigido: só envia token se existir no user/store
+    const tk = user?.token || token || store.get('cf_token', null);
+    if (tk) payload.token = tk;
 
-      const text = await res.text();
-      let data; try{ data = JSON.parse(text); }catch(e){ throw new Error(`Resposta não-JSON (HTTP ${res.status}). ${text.slice(0,160)}...`); }
-      if(!res.ok || data.ok===false) throw new Error(data.error || `HTTP ${res.status}`);
-      return data;
-    }finally {
-      showTopbarLoader(false);
+    const res = await fetch(API_URL, { 
+      method:'POST', 
+      body: JSON.stringify({ acao, ...payload }) 
+    });
+
+    const text = await res.text();
+    let data; 
+    try { 
+      data = JSON.parse(text); 
+    } catch(e) { 
+      throw new Error(`Resposta não-JSON (HTTP ${res.status}). ${text.slice(0,160)}...`); 
     }
+
+    if (!res.ok || data.ok === false) throw new Error(data.error || `HTTP ${res.status}`);
+    return data;
+
+  } catch (e) {
+    console.error('API', acao, e);
+    // aqui você pode silenciar ou trocar o aviso se não quiser mostrar para o cliente
+    toastErr(`Não foi possível completar: ${acao}. Tente novamente.`);
+    return { ok:false, error: e.message };
+  } finally {
+    showTopbarLoader(false);
   }
+}
+
 
   // ===== NOTIFICAÇÕES (sino) =====
   const NOTIF_KEY = 'cf_notifs';
